# robot-buddy

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  face_baseline_inventory.md  justfile  plan.md  pyrightconfig.json  ruff.toml  stage-4-todo-plan.txt  supervisor_plan.md
esp32-face-display/main/: CMakeLists.txt  app_main.cpp  audio.cpp  audio.h  config.h  display.cpp  face_state.cpp  face_state.h  face_ui.cpp  face_ui.h  pin_map.h  protocol.cpp  protocol.h  shared_state.h  telemetry.cpp  telemetry.h  touch.cpp  touch.h  usb_composite.cpp  usb_composite.h  usb_rx.cpp
esp32-face-v2/main/: CMakeLists.txt  app_main.cpp  config.h  conv_border.cpp  conv_border.h  display.cpp  face_state.cpp  face_state.h  face_ui.cpp  face_ui.h  idf_component.yml  led.cpp  pin_map.h  pixel.h  protocol.cpp  protocol.h  shared_state.h  system_overlay_v2.cpp  system_overlay_v2.h  telemetry.cpp  touch.cpp  touch.h  usb_composite.cpp  usb_composite.h  usb_rx.cpp  usb_rx.h
esp32-reflex/main/: CMakeLists.txt  app_main.cpp  bmi270_config.h  config.cpp  config.h  control.cpp  control.h  encoder.cpp  encoder.h  imu.cpp  imu.h  motor.cpp  motor.h  pin_map.h  protocol.cpp  protocol.h  range_ultrasonic.cpp  range_ultrasonic.h  safety.cpp  safety.h  shared_state.h  telemetry.cpp  telemetry.h  usb_rx.cpp  usb_rx.h
server/: Modelfile  README.md  pyproject.toml
server/app/: admission.py  ai_runtime.py  config.py  main.py
server/app/eval/: __init__.py  __main__.py  harness.py
server/app/llm/: __init__.py  base.py  client.py  conversation.py  expressions.py  factory.py  mcp_client.py  model_config.py  ollama_backend.py  preamble.py  prompts.py  schemas.py  stream_parser.py  vllm_backend.py
server/app/routers/: converse.py  eval.py  plan.py  tts.py
server/app/stt/: whisper.py
server/app/tts/: orpheus.py  schemas.py  synth.py
server/scripts/: spike_vision_loop.py
server/tests/: test_admission.py  test_config.py  test_conversation.py  test_conversation_multimodal.py  test_converse_sessions.py  test_converse_stream.py  test_eval.py  test_llm_factory.py  test_mcp_client.py  test_ollama_client.py  test_plan.py  test_preamble.py  test_prompts.py  test_prosody_tag.py  test_schemas.py  test_stream_parser.py  test_stt.py  test_tts.py  test_tts_pinning.py  test_tts_resampling.py  test_vllm_backend.py
supervisor/: MCU_UPGRADE.md  MIGRATION.md  PROTOCOL.md  README.md  __main__.py  config.py  main.py  pyproject.toml
supervisor/api/: conv_benchmark.py  conversation_capture.py  http_server.py  mcu_benchmark.py  mcu_benchmark_face.py  mcu_benchmark_reflex.py  param_persistence.py  param_registry.py  protocol_capture.py  tts_benchmark.py
supervisor/core/: action_scheduler.py  behavior_engine.py  conv_choreographer.py  conv_state.py  event_bus.py  event_router.py  guardrails.py  mood_sequencer.py  safety.py  skill_executor.py  speech_policy.py  state.py  state_machine.py  tick_loop.py  worker_manager.py
supervisor/devices/: clock_sync.py  expressions.py  face_client.py  power_monitor.py  protocol.py  reflex_client.py
supervisor/inputs/: detectors.py
supervisor/io/: raw_logger.py  serial_transport.py
supervisor/mcp/: __init__.py  audit.py  server.py  tools.py
supervisor/messages/: types.py
supervisor/mock/: mock_reflex.py
supervisor/models/: hey_buddy.onnx
supervisor/personality/: affect.py  memory.py
supervisor/static/: index.html
supervisor/static/assets/: index-B2t65XKn.js  index-B54rIrIY.js  index-B7qH9vEa.css  index-BEB8yhkK.js  index-BO2m7dZu.js  index-BY9gBELj.css  index-Bg837Pi2.css  index-BhFGG1Hv.js  index-Blpd4v-9.js  index-Bw1FTPQA.js  index-Bwjeupsf.js  index-C-9VHkVH.js  index-C38QmQ3v.js  index-C3zKvbUC.js  (+25 more)
supervisor/supervisor/: __main__.py  config.py  main.py  runtime.py
supervisor/tests/: test_affect.py  test_api.py  test_audio_orchestrator.py  test_bringup_diag.py  test_clock_sync.py  test_cobs.py  test_conv_choreographer.py  test_conv_state.py  test_conversation_manager.py  test_core.py  test_crc.py  test_detectors.py  test_ear_worker.py  test_expressions.py  test_face_client.py  test_face_protocol.py  test_face_protocol_payloads.py  test_guardrails.py  test_imu.py  test_lip_sync.py  test_mcp.py  test_mcu_benchmark_face.py  test_mcu_benchmark_reflex.py  test_mcu_benchmark_stats.py  test_memory.py  test_messages.py  test_mood_sequencer.py  test_personality_client.py  test_personality_worker.py  test_planner_client.py  test_planner_event_bus.py  test_planner_ordering_idempotency.py  test_planner_validator_scheduler.py  test_policies.py  test_power_monitor.py  test_protocol.py  test_protocol_v2.py  test_raw_logger.py  test_runtime_personality_face.py  test_runtime_planner_face.py  (+10 more)
supervisor/vision/: __init__.py  mask_store.py
supervisor/workers/: ai_worker.py  base.py  ear_worker.py  personality_worker.py  tts_worker.py  vision_worker.py
(+353 files in other folders)
