[project]
name = "robot-buddy-supervisor"
version = "0.1.0"
description = "Raspberry Pi 5 supervisor for robot-buddy (process-isolated workers)"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "psutil>=5.9",
]

[project.optional-dependencies]
ear = [
    # openwakeword installed --no-deps (tflite-runtime unavailable on py3.12+ aarch64;
    # we use inference_framework="onnx" so tflite is not needed at runtime)
    "openwakeword>=0.6",
    "onnxruntime>=1.16",
    "scipy>=1.3",
    "scikit-learn>=1",
]
rpi = [
    "picamera2>=0.3.17",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["supervisor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::pytest.PytestConfigWarning"]
