idf_component_register(
    SRCS "app_main.cpp"
         "protocol.cpp"
         "usb_composite.cpp"
         "usb_rx.cpp"
         "telemetry.cpp"
         "display.cpp"
         "touch.cpp"
         "face_state.cpp"
         "face_ui.cpp"
         "led.cpp"
         "audio.cpp"
    INCLUDE_DIRS "."
    REQUIRES "esp_lcd" "esp_timer" "driver" "esp_system"
)
