idf_component_register(
    SRCS "app_main.cpp"
         "protocol.cpp"
         "usb_composite.cpp"
         "usb_rx.cpp"
         "telemetry.cpp"
         "display.cpp"
         "touch.cpp"
         "face_state.cpp"
         "system_overlay_v2.cpp"
         "face_ui.cpp"
         "conv_border.cpp"
         "led.cpp"
    INCLUDE_DIRS "."
    REQUIRES "esp_lcd" "esp_timer" "driver" "esp_system"
)
